--- a/style.css
+++ b/style.css
@@ -173,3 +173,19 @@ body {
 
 
 /* end of collecion */
+
+
+/* gallery */
+
+.gallery-list-item {
+    color: #777;
+    cursor: pointer;
+    user-select: none;
+}
+
+.active-item {
+    color: #75B1D4;
+}
+
+
+/* end of gallery */
