--- a/style.css
+++ b/style.css
@@ -191,7 +191,82 @@ body {
 /* end of gallery */
 
 
-/* customers */
+/* pricing */
+
+.card-1,
+.card-2,
+.card-3 {
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .5)), url(images/pricing-card-bg.jpeg) center /cover;
+    box-shadow: 7px 18px 50px #555;
+    max-width: 400px;
+}
+
+.card-list-item {
+    border-bottom: 1px groove white;
+    width: 55%;
+    margin: auto;
+}
+
+.price-card-button {
+    background: #F9793D;
+    width: 130px;
+    border-radius: 25px;
+    box-shadow: 5px 8px 18px black;
+    transition: all .2s;
+}
+
+.price-card-button:hover {
+    background: #F9793D;
+    transform: translateY(-2px);
+}
+
+.moveFromLeft {
+    animation-name: moveFromLeft;
+    animation-duration: 2s;
+}
+
+.moveFromRight {
+    animation-name: moveFromRight;
+    animation-duration: 2s;
+}
+
+.moveFromBottom {
+    animation-name: moveFromBottom;
+    animation-duration: 2s;
+}
+
+@keyframes moveFromLeft {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes moveFromRight {
+    0% {
+        transform: translateX(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes moveFromBottom {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 
 
-/* end of customers */
+/* end of pricing */
