--- a/style.css
+++ b/style.css
@@ -270,3 +270,98 @@ body {
 
 
 /* end of pricing */
+
+
+/* contact */
+
+.contact {
+    background: linear-gradient(105deg, rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95) 50%, transparent 50%), url(images/form-img.jpeg) center center /cover;
+}
+
+.input {
+    background: transparent;
+    border-color: transparent;
+    border-bottom: 2px solid #ccc;
+    border-radius: 0;
+    transition: all .8s;
+}
+
+.input:focus {
+    background: transparent;
+    border-color: transparent;
+    box-shadow: none;
+    color: #fff;
+    border-bottom: 2px solid #f5593d;
+}
+
+.submit-button {
+    background: #f5593d;
+    color: #eee;
+    transition: all .3s;
+}
+
+.submit-button:hover {
+    background: #f9793d;
+    transform: translateY(-3px);
+}
+
+.label {
+    color: #777;
+    display: block;
+    margin-top: -70px;
+    margin-left: 4px;
+    font-size: 13px;
+    transition: all .3s;
+    transform: translate(20px, 20px);
+    visibility: hidden;
+}
+
+input:focus::placeholder {
+    color: transparent;
+}
+
+.input:focus+.label {
+    transform: translate(0px, 0px);
+    color: #f9793d;
+    visibility: visible;
+}
+
+@media (min-width: 760px) and (max-width: 992px) {
+    .contact {
+        background: linear-gradient(105deg, rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95) 50%, transparent 50%), url(images/form-img.jpeg) center center /cover;
+    }
+    .contact-form {
+        width: 80%;
+        margin: auto;
+    }
+}
+
+@media (max-width: 760px) {
+    .contact {
+        background: linear-gradient( rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95));
+    }
+    .contact-form {
+        width: 80%;
+        margin: auto;
+    }
+}
+
+
+/* end of contact */
+
+
+/* footer */
+
+.footer-link {
+    color: #eee;
+    font-size: 13px;
+    transition: all .3s;
+}
+
+.footer-link:hover {
+    color: #70aed2;
+    text-decoration: none;
+}
+
+
+/* end of footer */
